Bug 75962 - PIVOTTABLE selected page field member is displayed incorrectly.
Summary: PIVOTTABLE selected page field member is displayed incorrectly.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.2.1 release
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.3
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-10 01:20 UTC by Kohei Yoshida
Modified: 2014-03-10 14:12 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
test document (17.63 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-03-10 01:21 UTC, Kohei Yoshida
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2014-03-10 01:20:43 UTC
1. Open the attached test document.
2. Launch the page field selector popup and select any one of the page field values. But make sure you only select one value, not multiple. Click OK to commit the change.
3. Cell B10 shows the selected value but without the leading '000'.

Since the source values are set to text in order to preserve the leading '0's, we should not strip the leading zeros here either.
Comment 1 Kohei Yoshida 2014-03-10 01:21:09 UTC
Created attachment 95482 [details]
test document
Comment 2 Kohei Yoshida 2014-03-10 01:21:27 UTC
I'm on it.
Comment 3 Commit Notification 2014-03-10 01:35:50 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f86d94a2d1b3a61d290c072431c0af8446ec15bf&h=libreoffice-4-2

fdo#75962: Avoid unwanted number detection when placing page field name.


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-03-10 01:36:04 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bd378b6346bf5aca4328c57f2ff3c18932691a47

fdo#75962: Write test for this first.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-03-10 01:36:17 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0919979bd1da3379e030b353a097d8fe1fd8341a

fdo#75962: Avoid unwanted number detection when placing page field name.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2014-03-10 01:39:46 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6bc967177668bdc2279bc03bf1f7688a1e2a4c47&h=libreoffice-4-2

Revert "fdo#75962: Avoid unwanted number detection when placing page field name."


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Kohei Yoshida 2014-03-10 01:40:37 UTC
I pushed the change to the 4.2 branch by mistake.  I reverted it and I'll push to gerrit for review instead.
Comment 8 Kohei Yoshida 2014-03-10 01:40:46 UTC
4.2 backport request: https://gerrit.libreoffice.org/8508
Comment 9 Commit Notification 2014-03-10 14:10:11 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c57cac9d9255c46dbab925535b563885d57675cc&h=libreoffice-4-2

fdo#75962: Avoid unwanted number detection when placing page field name.


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Kohei Yoshida 2014-03-10 14:12:55 UTC
Fixed.