fdo#75962: Avoid unwanted number detection when placing page field name.

Change-Id: I1a3c57ec029e03198b8f190acfa8d59e142acaba
(cherry picked from commit 0919979bd1da3379e030b353a097d8fe1fd8341a)