sc/source/core/data/dpoutput.cxx
@@ -1003,7 +1003,9 @@ void ScDPOutput::Output()
         else if (n > 1)
             aPageValue = ScResId(SCSTR_MULTIPLE).toString();
 
-        pDoc->SetString( nFldCol, nHdrRow, nTab, aPageValue );
+        ScSetStringParam aParam;
+        aParam.setTextInput();
+        pDoc->SetString(nFldCol, nHdrRow, nTab, aPageValue, &aParam);
 
         lcl_SetFrame( pDoc,nTab, nFldCol,nHdrRow, nFldCol,nHdrRow, 20 );
     }
